Raise error for use with python2 (rosbag only record with python3, pickle cannot work)

--- a/notebooks/sl1m_integration_planeseg.ipynb
+++ b/notebooks/sl1m_integration_planeseg.ipynb
@@ -49,6 +49,9 @@
     "# POSSIBILITY OF SUCH DAMAGE.\n",
     "\n",
     "%matplotlib notebook\n",
+    "import sys\n",
+    "if sys.version_info.major == 2:\n",
+    "    raise ValueError(\"Cannot use with python2. Pickle do not use the appropriate protocole. The rosbag has been registered with python3.\")\n",
     "import rospy\n",
     "from visualization_msgs.msg import MarkerArray\n",
     "from visualization_msgs.msg import Marker\n",
@@ -59,7 +62,10 @@
     "import numpy as np\n",
     "from walkgen_surface_planner.tools.geometry_utils import order, compute_inner_inequalities, compute_inner_vertices\n",
     "import visvalingamwyatt as vw \n",
-    "from time import perf_counter as clock\n",
+    "try:\n",
+    "    from time import perf_counter as clock\n",
+    "except ImportError:\n",
+    "    from time import time as clock \n",
     "from enum import Enum\n",
     "from scipy.spatial import ConvexHull\n",
     "import walkgen_surface_planner.tools.Tess2 as Tess\n",
@@ -590,7 +596,10 @@
     "import os\n",
     "import pickle\n",
     "import numpy as np\n",
-    "from time import perf_counter as clock\n",
+    "try:\n",
+    "    from time import perf_counter as clock\n",
+    "except ImportError:\n",
+    "    from time import time as clock \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import sl1m.tools.plot_tools as plot\n",
